[package]
name = "dust-new"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
git = "https://github.com/Neo-Zhixing/bevy.git"
branch="update-to-wgpu-master"
default-features = false
features = [
    "bevy_winit",
    "x11",
    "bevy_render2",
    "bevy_core_pipeline"
]


[dependencies]
ash = "0.33"
ash-window = "0.7"
gpu-alloc = "0.5.0"
gpu-alloc-ash = "0.2.0"

[build-dependencies]
shaderc = "0.7"
