[package]
name = "dust-new"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
path = "../bevy"
default-features = false
features = [
    "bevy_winit",
    "x11",
    "bevy_render2",
    "bevy_core_pipeline",
    "bevy_pbr2"
]


[dependencies]
ash = "0.33"
ash-window = "0.7"
gpu-alloc = "0.5.0"
gpu-alloc-ash = "0.2.0"
wgpu = { path = "../wgpu/wgpu", features = ["spirv"] }
wgpu-hal = { path = "../wgpu/wgpu-hal" }
wgpu-types = { path = "../wgpu/wgpu-types" }
crossbeam = "0.8"
dot_vox = { git = "https://github.com/Sixmorphugus/dot_vox", branch="scenegraph" }
anyhow = "*"
num = "0.4"

[build-dependencies]
shaderc = "0.7"
