[package]
name = "dust-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
path = "../bevy"
default-features = false
features = [
    "bevy_winit",
    "x11",
]


[dependencies]
ash = "0.33"
ash-window = "0.7"
gpu-alloc = "0.5.0"
gpu-alloc-ash = "0.2.0"
crossbeam = "0.8"
dot_vox = { git = "https://github.com/Sixmorphugus/dot_vox", branch="scenegraph" }
anyhow = "*"
num = "0.4"
crevice = { path = "../bevy/crates/crevice" }

[build-dependencies]
shaderc = "0.7"
